# jonoondb

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  License.txt  README.md  appveyor.yml  circle.yml  cpp_style_guide.txt  cpplint.py  documentation_indexing.html  getting_started_installation.html  getting_started_tutorial.html  index.html  params.json  readme.txt  roadmap.html  tutorial.html
.githooks/: pre-commit
css/: custom_sidebar.css  style.css
include/: buffer.h  buffer_impl.h  cdatabase.h  cenums.h  constants.h  database.h  database_impl.h  document.h  document_schema.h  enums.h  ex_database.h  field.h  index_info.h  index_info_impl.h  indexer.h  jonoondb_exceptions.h  options.h  resultset.h  resultset_impl.h  standard_deleters.h  status.h
include/dbgen_converter/: customer_generated.h  lineitem_generated.h  nation_generated.h  orders_generated.h  part_generated.h  partsupp_generated.h  region_generated.h  supplier_generated.h
include/internal/: blob_manager.h  blob_metadata.h  buffer_impl.h  concurrent_lru_cache.h  concurrent_map.h  constraint.h  database_impl.h  database_metadata_manager.h  document_collection.h  document_collection_dictionary.h  document_factory.h  document_id_generator.h  document_schema.h  document_schema_factory.h  ewah_compressed_bitmap_indexer.h  ewah_compressed_bitmap_indexer_double.h  ewah_compressed_bitmap_indexer_int32.h  ewah_compressed_bitmap_indexer_integer.h  ewah_compressed_bitmap_indexer_string.h  exception_utils.h  field_name_parser.h  file.h  filename_manager.h  flatbuffers_document.h  flatbuffers_document_schema.h  flatbuffers_field.h  guard_funcs.h  id_seq.h  index_info_fb.fbb  index_info_fb.fbs  index_info_fb_generated.h  index_manager.h  index_stat.h  indexer.h  indexer_factory.h  mama_jennies_bitmap.h  memory_mapped_file.h  object_pool.h  options_impl.h  query_processor.h  (+6 more)
include/internal/ewah_boolarray/: ewahutil.h
include/internal/flatbuffers/: idl.h  util.h
include/jonoondb_api/: blob_manager.h  blob_metadata.h  buffer_impl.h  cdatabase.h  concurrent_lru_cache.h  concurrent_map.h  constants.h  constraint.h  database.h  database_impl.h  database_metadata_manager.h  delete_vector.h  document.h  document_collection.h  document_collection_dictionary.h  document_factory.h  document_id_generator.h  document_schema.h  document_schema_factory.h  endian_utils.h  enums.h  ewah_compressed_bitmap_indexer_blob.h  ewah_compressed_bitmap_indexer_double.h  ewah_compressed_bitmap_indexer_integer.h  ewah_compressed_bitmap_indexer_string.h  exception_utils.h  field.h  file.h  file_info.h  filename_manager.h  flatbuffers_document.h  flatbuffers_document_schema.h  flatbuffers_field.h  guard_funcs.h  id_seq.h  index_info_impl.h  index_manager.h  index_stat.h  indexer.h  indexer_factory.h  (+21 more)
include/jonoondb_api_test/: all_field_type_generated.h  test_utils.h
include/jonoondb_utils/: stopwatch.h  varint.h
include/test/: test_config.h.in
js/: custom_sidebar.js
resources/jonoondb_api_test/: all_field_type.bfbs  all_field_type.fbs  tweet.bfbs  tweet.fbs
resources/schemas/flatbuffers/dbgen_converter/: customer.fbs  lineitem.fbs  nation.fbs  orders.fbs  part.fbs  partsupp.fbs  region.fbs  supplier.fbs
scripts/: install_boost_1.60.0.sh  install_boost_for_linux_or_osx.sh  install_boost_for_win.bat  install_cmake_for_linux_or_osx.sh
src/dbgen_converter/: main.cc
src/jonoondb_api/: blob_manager.cc  buffer.cc  buffer_impl.cc  cdatabase.cc  database.cc  database_impl.cc  database_metadata_manager.cc  delete_vector.cc  document_collection.cc  document_collection_dictionary.cc  document_factory.cc  document_id_generator.cc  document_schema_factory.cc  endian_utils.cc  ewah_compressed_bitmap_indexer.cc  exception_utils.cc  field_name_parser.cc  filename_manager.cc  flatbuffers_document.cc  flatbuffers_document_schema.cc  flatbuffers_field.cc  guard_funcs.cc  id_seq.cc  index_info.cc  index_info_impl.cc  index_manager.cc  index_stat.cc  indexer_factory.cc  jonoondb_vtable.cc  mama_jennies_bitmap.cc  options.cc  options_impl.cc  query_processor.cc  resultset_impl.cc  status.cc  status_impl.cc
src/jonoondb_api_test/: blob_manager_tests.cc  database_sql_tests.cc  database_tests.cc  document_tests.cc  filename_manager_tests.cc  flatbuffers_document_tests.cc  jonoondb_exception_tests.cc  main.cc  memory_mapped_file_tests.cc  object_pool_tests.cc  options_tests.cc  status_impl_tests.cc
src/jonoondb_cli/: main.cc
test/: blob_manager_tests.cc  buffer_tests.cc  concurrent_lru_cache_tests.cc  database_metadata_manager_tests.cc  database_tests.cc  document_tests.cc  filename_manager_tests.cc  flatbuffers_document_tests.cc  main.cc  memory_mapped_file_tests.cc  status_impl_tests.cc  status_tests.cc  test_utils.h
test/schemas/flatbuffers/: tweet.fbs  tweet_generated.h
tests/jonoondb_api/: all_field_type_generated.h  blob_manager_tests.cc  buffer_tests.cc  concurrent_lru_cache_tests.cc  database_delete_tests.cc  database_metadata_manager_tests.cc  database_sql_tests.cc  database_tests.cc  delete_vector_tests.cc  document_tests.cc  filename_manager_tests.cc  flatbuffers_document_tests.cc  index_info_tests.cc  jonoondb_api_test_utils.cc  jonoondb_api_test_utils.h  jonoondb_api_vx_test_utils.cc  jonoondb_api_vx_test_utils.h  jonoondb_exception_tests.cc  main.cc  memory_mapped_file_tests.cc  object_pool_tests.cc  options_tests.cc  proc_utils_tests.cc  resultset_tests.cc  status_impl_tests.cc  test_utils.cc  test_utils.h  tweet_generated.h
tests/jonoondb_utils/: varint_tests.cc
